    was never freed, leaking memory with each remctl client call, and a
    Kerberos ticket cache struct could also be leaked in some situations.

    Fix Net::Remctl::Backend argument count validation when one of the
    arguments is coming from standard input.  The count of arguments was
    previously not updated properly after splicing in the extra argument.

    Work around a bug in the Module::Build version that comes with RHEL 5
    in passing compiler and linker flags to the Perl module build.

    Update to rra-c-util 5.1:

    * Suppress a dummy symbol in the client library that could leak.
    * Don't attempt to use Kerberos if no Kerberos error APIs were found.
    * Improve error handling in xasprintf and xvasprintf.
    * Check the return status of snprintf and vsnprintf properly.
    * Preserve errno if snprintf fails in vasprintf replacement.
    * Improve error handling of network_bind_* functions.
    * vector_free and cvector_free now can be passed NULL.
    * Abort remctl tests if the PID file already exists.

    Update to C TAP Harness 2.4:

    * Suppress lazy plans and test summaries if the test failed with bail.

remctl 3.6 (2013-08-14)

    If the client specifies a timeout, restart the wait for a nonblocking
    connect when interrupted by a signal.  This can mean that a connect
    can take longer than the timeout if interrupted; hopefully both
    timeouts and catching signals are rare enough that this won't pose a
    serious issue.

    The help output from Net::Remctl::Backend now checks for commands
    whose syntax is excessively long and does not let them influence the
    formatting of the summary.  This keeps commands with a long syntax
    from forcing all the summary output into a skinny column against the
    right margin and allows proper help output for commands with a syntax
    longer than 80 columns.

    Fix compilation problems with Kerberos libraries that don't have