@@ -11,6 +11,11 @@ remctl 3.7 (unreleased)
     arguments is coming from standard input.  The count of arguments was
     previously not updated properly after splicing in the extra argument.
 
+    Add support for upstart's expect stop daemon synchronization method.
+    When starting remctld in stand-alone mode with upstart, pass the new
+    -Z option to remctld, and it will raise SIGSTOP when ready to accept
+    connections, signaling to upstart that the daemon has fully started.
+
     Work around a bug in the Module::Build version that comes with RHEL 5
     in passing compiler and linker flags to the Perl module build.
 
